# Search_Engine

./: .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  build_log.txt  docker-compose.debug.yml  docker-compose.yml  my.html  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_04_24_0005-a47d55890ab9_initial_schema_creation_for_postgresql.py
alembic/versions_sqlite_backup/: 2025_04_22_1515-7904841cb84c_create_initial_tables_without_word_count.py  2025_04_22_1519-b8fa895d5396_add_word_count_column_to_documents.py
app/: database.py  main.py  models.py  schemas.py  search_engine.py  test.py
test_data/: testfastapi3.txt
tests/: test_split_to_word.py
