[project]
name = "vs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "dataclasses>=0.8",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.0",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.5",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "ruff==0.4.3",
]

[tool.ruff]
line-length = 88
