[project]
name = "vs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "asgi-lifespan>=2.1.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fakeredis>=2.28.1",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pre-commit>=4.2.0", # Обычно это dev-зависимость
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.0",
    "pytest>=8.3.5", # Обычно это dev-зависимость
    "redis>=5.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
  "pytest==8.3.5",
  "pytest-asyncio==0.23.6",
  "pytest-cov==5.0.0",
  "httpx==0.27.0",
  "ruff==0.4.3",
]

[tool.ruff]
line-length = 88

# === ДОБАВЛЕННАЯ СЕКЦИЯ ===
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"] # Явно указываем, что только 'app' является пакетом для сборки
# Или, если у вас есть и другие пакеты *внутри* app, которые нужно найти:
# [tool.setuptools.packages.find]
# include = ["app", "app.*"]